KTTL-2054 - Fundraise LP -Fix hero button spacing (#1237)

--- a/src/theme/css/frontend/page-header/_index.scss
+++ b/src/theme/css/frontend/page-header/_index.scss
@@ -55,11 +55,6 @@
   }
 
 
-  .page-btn {
-    @apply h-px46;
-  }
-
-
   @screen md {
 
     &-inner {
